# AgentParliament

./: .gitignore  AgentPrompt.txt  README.en.md  README.md  chain.py  mcp.config.json  profiles.example.json  prompts.py  pyproject.toml  render.py  runner.py  server.py  worktree_manager.py
