[project]
name = "agent-parliament"
version = "1.5.0"
description = "一个 MCP 服务：让主Agent在必要时调用多个国内外模型做调研、代码审查、独立分析与多模型共识，所有副Agent均以只读模式运行。"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
agent-parliament = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 扁平多模块结构，用通配符一次性包含所有顶层 .py，新增模块无需维护此列表
[tool.hatch.build.targets.wheel]
include = ["*.py"]